# textbook.nvim

./: .gitignore  README.md  pyproject.toml
rplugin/python3/: textbook.py
src/textbook_nvim/: cli.py  parser.py  render.py
