[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "textbook_nvim"
version = "0.5.0"
authors = [{name = "Juan Lara", email = "julara@unal.edu.co"}]
description = "Main python package for the textbook.nvim plugin."
requires-python = ">3.8"
dependencies = [
    "pydantic", "pynvim", "rich", "click", "jupytext", "flatlatex"
]

[tool.setuptools.packages.find]
where = ["src/"]

[project.optional-dependencies]
dev = ["flit", "black"]

[project.scripts]
tbcli = "textbook_nvim.cli:main"

